# Tartarus

./: .gitignore  README.md
backend/: package.json
container/: CMakeLists.txt
container/common/: CMakeLists.txt
container/common/include/common/: fd_guard.hpp
container/ebpf/: CMakeLists.txt
container/observer/: CMakeLists.txt
container/observer/include/observer/: EbpfLoader.h  EventReader.h
container/observer/src/: ebpf_loader.cpp  event_reader.cpp
container/sandbox/: CMakeLists.txt
container/sandbox/include/sandbox/: Sandbox.h
container/sandbox/include/sandbox/isolation/: CapabilityDropper.h  FileSystem.h  NamespaceHandler.h  SeccompProfile.h
container/sandbox/include/sandbox/resources/: CgroupManager.h  NetworkManager.h  ResourceManager.h
container/sandbox/src/: main.cpp  sandbox.cpp
container/sandbox/src/isolation/: CapabilityDropper.cpp  FileSystem.cpp  NamespaceHandler.cpp  SeccompProfile.cpp
container/sandbox/src/resources/: CgroupManager.cpp  NetworkManager.cpp  ResourceManager.cpp
frontend/: index.html  package.json  tsconfig.json
sandbox/src/: fd_guard.hpp
